--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Интеко</title>
 </head>
 <body>
 <div class="container">
 	<header class="header">
-		<a href="#" class="header__logo"></a>
+		<a class="header__logo" href="#"></a>
 		<button class="header__language"></button>
 	</header>
 	<div class="content">
 		<div class="top-wrapper">
 			<section class="about">
 
-				<img src="<%=require('./images/about-image.jpg')%>" alt="Дом Интеко" class="about__image">
+				<img alt="Дом Интеко" class="about__image" src="<%=require('./images/about-image.jpg')%>">
 			</section>
 
 			<div class="about__content-wrapper">
@@ -40,7 +40,41 @@
 						в Москве, Ростове-на-Дону, Санкт-Петербурге и Ленинградской области и построила более 5 млн кв. м.
 					</p>
 				</div>
-				<img src="<%=require('./images/projects-image.jpg')%>" alt="Проекты Интеко" class="projects__image">
+				<img alt="Проекты Интеко" class="projects__image" src="<%=require('./images/projects-image.jpg')%>">
+				<div class="switch-slide switch-slide__projects">
+					<ul class="switch-slide__list">
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button switch-slide__button_active"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+						<li class="switch-slide__item">
+							<button class="switch-slide__button"></button>
+						</li>
+					</ul>
+				</div>
 				<div class="project__examples-wrapper">
 					<div class="project__examples">
 						<h2 class="project__examples-title">Среди знаковых проектов:</h2>
@@ -61,64 +95,64 @@
 			</section>
 		</div>
 
-			<section class="now-history">
-				<div class="now">
-					<h2 class="now__about-title">Интеко сейчас</h2>
-					<div class="now__about">
+		<section class="now-history">
+			<div class="now">
+				<h2 class="now__about-title">Интеко сейчас</h2>
+				<div class="now__about">
 
-						<p class="now__about-text">Центральный офис «ИНТЕКО» расположен в Москве, также у компании
-							есть представительства в Ростове-на-Дону и Санкт-Петербурге. На данный момент «ИНТЕКО» находится
-							в стадии реализации стратегической программы трансформации:
-						</p>
+					<p class="now__about-text">Центральный офис «ИНТЕКО» расположен в Москве, также у компании
+						есть представительства в Ростове-на-Дону и Санкт-Петербурге. На данный момент «ИНТЕКО» находится
+						в стадии реализации стратегической программы трансформации:
+					</p>
 
-						<div class="now__people-wrapper">
-							<div class="now__people">
-								<p class="now__people-title">
-									Более <br>
-									<span class="now__number">
+					<div class="now__people-wrapper">
+						<div class="now__people">
+							<p class="now__people-title">
+								Более <br>
+								<span class="now__number">
 								2000</span> человек
-								</p>
-								<p class="now__people-text">
-									Общая численность персонала
-								</p>
-							</div>
-							<div class="now__people">
-								<p class="now__people-title">
-									около <br>
-									<span class="now__number">
+							</p>
+							<p class="now__people-text">
+								Общая численность персонала
+							</p>
+						</div>
+						<div class="now__people">
+							<p class="now__people-title">
+								около <br>
+								<span class="now__number">
 								1,2</span> млн&nbsp;кв.&nbsp;м.
-								</p>
-								<p class="now__people-text">
-									Объем текущего строительства
-								</p>
-							</div>
+							</p>
+							<p class="now__people-text">
+								Объем текущего строительства
+							</p>
 						</div>
 					</div>
-
 				</div>
 
-				<div class="history">
+			</div>
 
-						<img src="<%=require('./images/history.jpg')%>" alt="" class="history__image">
-						<div class="history__list-wrapper">
-							<ul class="history__list">
-								<li class="history__item">В 2019 г. состоялся ребрендинг
-								</li>
-								<li class="history__item">Компания одной из первых в России перешла на работу по новым правилам
-									строительной отрасли, предполагающей использование эскроу-счетов
-								</li>
-								<li class="history__item">Происходит комплексная цифровизация бизнес-процессов
-								</li>
-								<li class="history__item">Запускаются новые масштабные девелоперские проекты
-								</li>
-								<li class="history__item">Компания реализует нестандартные имиджевые проекты, поддерживает
-									творчество современных российских художников по созданию крупных уличных скульптур
-								</li>
-							</ul>
-						</div>
-					</div>
+			<div class="history">
 
-			</section>
+				<img alt="" class="history__image" src="<%=require('./images/history.jpg')%>">
+				<div class="history__list-wrapper">
+					<ul class="history__list">
+						<li class="history__item">В 2019 г. состоялся ребрендинг
+						</li>
+						<li class="history__item">Компания одной из первых в России перешла на работу по новым правилам
+							строительной отрасли, предполагающей использование эскроу-счетов
+						</li>
+						<li class="history__item">Происходит комплексная цифровизация бизнес-процессов
+						</li>
+						<li class="history__item">Запускаются новые масштабные девелоперские проекты
+						</li>
+						<li class="history__item">Компания реализует нестандартные имиджевые проекты, поддерживает
+							творчество современных российских художников по созданию крупных уличных скульптур
+						</li>
+					</ul>
+				</div>
+			</div>
+
+		</section>
 
 		<section class="stuff">
 			<h2 class="stuff__title">
@@ -163,61 +197,61 @@
 				Компания предлагает своим сотрудникам
 			</h2>
 
-			<img src="<%=require('./images/offer.jpg')%>" alt="" class="offer__image">
+			<img alt="" class="offer__image" src="<%=require('./images/offer.jpg')%>">
 			<div class="switch switch__offer"></div>
-			<div class="offer__switch-wrapper">
-				<ul class="offer__switch-list">
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+			<div class="switch-slide switch-slide__offer">
+				<ul class="switch-slide__list">
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button offer__switch-button_active"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button switch-slide__button_active"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
-					<li class="offer__switch-item">
-						<button class="offer__switch-button"></button>
+					<li class="switch-slide__item">
+						<button class="switch-slide__button"></button>
 					</li>
 				</ul>
 			</div>
 			<div class="offer__list-wrapper">
-			<ul class="offer__list">
-				<li class="offer__item">работу в центре Москвы, в 1 минуте ходьбы от ст. метро «Красные ворота»</li>
-				<li class="offer__item">полное соблюдение норм трудового законодательства</li>
-				<li class="offer__item">возможность адаптации графика работы под индивидуальные потребности</li>
-				<li class="offer__item">возможность удаленного режима работы</li>
-				<li class="offer__item">своевременную выплату заработной платы</li>
-				<li class="offer__item">прозрачную систему KPI и премирования по итогам работы за год</li>
-				<li class="offer__item">корпоративные программы скидок и выгодные предложения от партнеров</li>
-				<li class="offer__item">материальную поддержку</li>
-				<li class="offer__item">добровольное медицинское страхование (включая стоматологию, страхование
-					выезжающих за рубеж, а также льготную стоимость страховки для членов семьи сотрудника)
-				</li>
-				<li class="offer__item">широкие возможности для совместного времяпрепровождения вне работы:
-					спортивные и интеллектуальные игры (в компании есть самообразующиеся группы по футболу, бегу и
-					интеллектуальным викторинам), корпоративные праздники, участие в мероприятиях, проводимых Советом
-					молодых специалистов строительной отрасли г. Москвы, и многое другое.
-				</li>
-			</ul>
+				<ul class="offer__list">
+					<li class="offer__item">работу в центре Москвы, в 1 минуте ходьбы от ст. метро «Красные ворота»</li>
+					<li class="offer__item">полное соблюдение норм трудового законодательства</li>
+					<li class="offer__item">возможность адаптации графика работы под индивидуальные потребности</li>
+					<li class="offer__item">возможность удаленного режима работы</li>
+					<li class="offer__item">своевременную выплату заработной платы</li>
+					<li class="offer__item">прозрачную систему KPI и премирования по итогам работы за год</li>
+					<li class="offer__item">корпоративные программы скидок и выгодные предложения от партнеров</li>
+					<li class="offer__item">материальную поддержку</li>
+					<li class="offer__item">добровольное медицинское страхование (включая стоматологию, страхование
+						выезжающих за рубеж, а также льготную стоимость страховки для членов семьи сотрудника)
+					</li>
+					<li class="offer__item">широкие возможности для совместного времяпрепровождения вне работы:
+						спортивные и интеллектуальные игры (в компании есть самообразующиеся группы по футболу, бегу и
+						интеллектуальным викторинам), корпоративные праздники, участие в мероприятиях, проводимых Советом
+						молодых специалистов строительной отрасли г. Москвы, и многое другое.
+					</li>
+				</ul>
 			</div>
 		</section>
 
