--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -16,7 +16,7 @@
 			<section class="about">
 
 				<img alt="Дом Интеко" class="about__image" src="<%=require('./images/about-image.jpg')%>">
-			</section>
+
 
 			<div class="about__content-wrapper">
 				<div class="about__content">
@@ -32,6 +32,7 @@
 					</p>
 				</div>
 			</div>
+			</section>
 
 			<section class="projects">
 				<div class="projects__our">
